# customer-support-openenv

./: .dockerignore  Dockerfile  PROJECT_DOCS.md  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_grader.py  ticket_generator.py
agent/: agent.py
first/: firstindex.html
logs/: metrics_churn_sla.json  metrics_clustering.json  metrics_incident_cascade.json  metrics_policy_conflict.json  metrics_triage_sprint.json
server/: Dockerfile  app.py  logger.py  session_manager.py  support_ops_env_environment.py
server/graders/: grader.py
server/tasks/: task_data.py
server/tools/: account_database.py  mock_tools.py
tests/: test_concurrent_requests.py  test_integration.py  test_tasks.py
